--- a/index.html
+++ b/index.html
@@ -9,17 +9,32 @@
   </head>
   <style>
     *{
-        background-color: skyblue;
+        background-color: skyblue !important;
         font-family: cursive;
     }
     .form select{
       width: 20px !important;
+      /* background: white !important;
+      color: aliceblue; */
+      background-color: antiquewhite !important;
+
     }
     .selection form{
         width: 20px !important;
+        /* background: white !important;
+      color: aliceblue; */
+      background-color: antiquewhite !important;
+
     }
     img{
-      width: 50px;
+      width: 90px;
+      background: skyblue;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+    }
+    .btn{
+       background: #000 !important;
     }
   </style>
   <body>
@@ -127,10 +142,10 @@
    <div class="main-container">
 
    </div>
-   <h1><i>Quick and easy trip planner</i></h1>
+   <h1><i>Quick and easy trip planner</i></h1><br>
    <h3><b><i>Pick a vibe and explore the top destinations in Pakistan</i></b></h3>
    <img src="good3.jpg" alt="">
-   <h1><i><b>Browse by property type in Gānji</b></i></h1>
+   <h1><i><b>Browse by property type in Gānji</b></i></h1><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
